composer update, add controllers with swagger
