# laravel/app/Swagger/OpenApi.php
@@ -1,0 +1,22 @@
+<?php
+namespace App\Swagger;
+
+/**
+ * @OA\Info(
+ *      version="1.0.0",
+ *      title="API Documentation",
+ *      description="L5 Swagger OpenApi description",
+ * )
+ *
+ * @OA\SecurityScheme(
+ *     securityScheme="bearerAuth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *   )
+ * )
+*/
+
+class OpenApi{
+
+}
